force-app/main/default/objects/MN_Page_Layout__c/MN_Page_Layout__c.object-meta.xml
<CustomObject>
    <label>MN Page Layout</label>
    <nameField>
        <label>MN Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN Page Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>