force-app/main/default/objects/MN_Page_Layout__c/fields/FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetName__c</fullName>
    <label>FieldSetName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>