force-app/main/default/objects/MN_Page_Layout__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>