force-app/main/default/objects/MN_Page_Layout__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>