force-app/main/default/objects/MN_Page_Layout__c/fields/SendEmail_SOSL__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_SOSL__c</fullName>
    <defaultValue>&apos;IN NAME FIELDS RETURNING Contact (Id, Name, Email WHERE Email!=null ORDER BY Name),Group (Id, Name,Type ORDER BY Name)&apos;</defaultValue>
    <label>SendEmail SOSL</label>
    <type>TextArea</type>
</CustomField>