force-app/main/default/objects/MN_Page_Layout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FieldSetName__c</columns>
    <columns>RecordType__c</columns>
    <columns>Profile__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Email_Prefill__c</columns>
    <columns>RecordTypeId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>